src/test/ui/nll/issue-52742.stderr
error[E0312]: lifetime of reference outlives lifetime of borrowed content...
  --> $DIR/issue-52742.rs:14:18
   |
LL |         self.y = b.z
   |                  ^^^
   |
note: ...the reference is valid for the lifetime '_ as defined on the impl at 12:10...
  --> $DIR/issue-52742.rs:12:10
   |
LL | impl Foo<'_, '_> {
   |          ^^
note: ...but the borrowed content is only valid for the anonymous lifetime #2 defined on the method body at 13:5
  --> $DIR/issue-52742.rs:13:5
   |
LL | /     fn take_bar(&mut self, b: Bar<'_>) {
LL | |         self.y = b.z
LL | |
LL | |     }
   | |_____^

error: aborting due to previous error

